--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,12 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "import numpy as np\n",
+    "A = np.array([[1402, 191], [1371, 821], [949, 1437], [147, 1448]])\n",
+    "B = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print ('A=\\n', A)\n",
+    "print ('B=\\n', B)"
    ]
   },
   {
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +84,9 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print('Shape of A:',A.shape)\n",
+    "print('Shape of B:',B.shape)"
    ]
   },
   {
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +117,11 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print(A[0,0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,1])\n",
+    "print(A[3,0])"
    ]
   },
   {
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,14 +148,21 @@
       " [0. 0. 0.]]\n",
       "\n",
       "after random data:\n",
-      " [[2. 7. 5.]\n",
-      " [7. 9. 3.]\n",
-      " [6. 5. 9.]]\n"
+      " [[3. 5. 2.]\n",
+      " [9. 1. 6.]\n",
+      " [5. 2. 7.]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "import random\n",
+    "M = np.zeros((3,3))\n",
+    "print ('before random data:\\n',M)\n",
+    "\n",
+    "for x in range(0, M.shape[0]):\n",
+    "    for y in range(0, M.shape[1]):\n",
+    "        M[x][y] = random.randrange(1, 10) \n",
+    "print ('\\nafter random data:\\n',M)"
    ]
   },
   {
@@ -159,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,15 +186,31 @@
      "text": [
       "Final output\n",
       "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
+      " [[ 5. 13.  7.  9.]\n",
+      " [ 2. 15. 11.  6.]\n",
+      " [ 5. 10. 13. 16.]\n",
+      " [11. 17. 12. 10.]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "def fill(matrix):\n",
+    "\n",
+    "    for x in range(0, matrix.shape[0]):\n",
+    "        for y in range(0, matrix.shape[1]):\n",
+    "            matrix[x][y] = random.randrange(1, 10)\n",
+    "    \n",
+    "    return matrix\n",
+    "\n",
+    "M1 = np.zeros((4,4))\n",
+    "M2 = np.zeros((4,4))\n",
+    "\n",
+    "M1_filled = fill(M1)\n",
+    "M2_filled = fill(M2)\n",
+    "out = M1_filled + M2_filled\n",
+    "\n",
+    "print ('Final output\\n\\n', out)"
    ]
   },
   {
@@ -191,9 +225,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
